# core_db

./: .gitignore  pyproject.toml
src/core_db/models/: __init__.py  auth.py  book.py  chunk.py  index.py  job.py  page.py  user.py
src/core_db/models/vector/: db.py
src/core_db/schemas/: auth.py  book.py  core_db.code-workspace  job.py  page.py  reader.py  task.py  user.py
src/core_db/vector/: db.py
