[project]
name = "core-db"
version = "0.1.0"
description = "Contains DB Models And Schemas"
readme = "README.md"
authors = [
    { name = "HARIPRASATH B", email = "harrylesnar24@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlmodel",
    "pydantic",
    "edwh-uuid7",
    "email-validator"
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
